[gd_scene load_steps=12 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://ui_theme.tres" type="Theme" id=3]
[ext_resource path="res://ScoreLabel.gd" type="Script" id=4]
[ext_resource path="res://art/House In a Forest Loop.ogg" type="AudioStream" id=5]
[ext_resource path="res://default_env.tres" type="Environment" id=6]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 30, 1, 30 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 60, 2, 60 )

[sub_resource type="CylinderMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.917647, 0.0823529, 0.0823529, 1 )

[sub_resource type="Curve3D" id=5]
_data = {
"points": PoolVector3Array( 0, 0, 0, 0, 0, 0, -13.2857, 0, -14.9871, 0, 0, 0, 0, 0, 0, 13.9037, 0, -14.6839, 0, 0, 0, 0, 0, 0, 13.095, 0, 14.9313, 0, 0, 0, 0, 0, 0, -13.7911, 0, 14.7291, 0, 0, 0, 0, 0, 0, -13.2857, 0, -14.9871 ),
"tilts": PoolRealArray( 0, 0, 0, 0, 0 )
}

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="Ground" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.13353, -1.27414, 0.266706 )
collision_layer = 4
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="Ground"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Ground"]
mesh = SubResource( 2 )
material/0 = null

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.120639, 0.992696, 0, -0.992696, -0.120639, 0.255758, 36.7008, -0.278387 )
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0400273, 0 )

[node name="CameraPivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 0.956534, 0.291621, 0, -0.291621, 0.956534, 0, 0, 0 )

[node name="Camera" type="Camera" parent="CameraPivot"]
transform = Transform( 1, 0, 0, 0, 0.955552, 0.294824, 0, -0.294824, 0.955552, -0.175507, 5.87539, 9.50949 )
projection = 1
current = true
size = 15.0

[node name="Cylinders" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.445251, -3.8147e-06, -1.51774 )

[node name="MeshInstance" type="MeshInstance" parent="Cylinders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.9059, 2.11322, -13.7561 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="MeshInstance2" type="MeshInstance" parent="Cylinders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -14.1335, 2.11322, -13.7561 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="MeshInstance3" type="MeshInstance" parent="Cylinders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.9059, 2.11322, 16.0648 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="MeshInstance4" type="MeshInstance" parent="Cylinders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -14.1335, 2.11322, 16.0648 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="SpawnPath" type="Path" parent="."]
curve = SubResource( 5 )

[node name="SpawnLocation" type="PathFollow" parent="SpawnPath"]
transform = Transform( -0.691005, 0, -0.72285, 0, 1, 0, 0.72285, 0, -0.691005, -13.2857, 0, -14.9871 )
rotation_mode = 1

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.7
autostart = true

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="UI"]
margin_left = 24.0
margin_top = 24.0
margin_right = 120.0
margin_bottom = 55.0
custom_colors/font_color = Color( 0.329412, 0.329412, 0.329412, 1 )
text = "Score: 0"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Retry" type="ColorRect" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.380392 )

[node name="Label" type="Label" parent="UI/Retry"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -15.5
margin_bottom = 15.5
text = "Press enter to retry."
align = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 6 )

[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
